# model-deployment-starter

./: .dockerignore  .env.example  .env.local  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.Dockerfile  app.py  docker-compose.yaml  model.Dockerfile  prediction_service.Dockerfile  prediction_service.py  pyproject.toml
.dvc/: config
data/: .gitignore  swedish_sentiment_test.jsonl.dvc  swedish_sentiment_train.jsonl.dvc  swedish_sentiment_val.jsonl.dvc
model/: train.py
models/: monitoring.py  simple_dataset.py  swedish_classifier.py
notebooks/: 1_inspect_data.ipynb  2_inspect_model_setup.ipynb  3_train_models.ipynb  4_train_models_on_more_data.ipynb  5_develop_drift_detection.ipynb  6_calibration.ipynb
prediction/: app.py
services/: app.Dockerfile  mlflow.Dockerfile  monitoring_service.Dockerfile  monitoring_service.py  prediction_service.py
tests/: test_app.py
