[project]
name = "model-deployment-starter"
version = "0.1.0"
description = "Containerized solution starter for developing, training and deploying prediction models"
requires-python = ">=3.14"

dependencies = [
    "pip-system-certs>=5.2",
    "fastapi>=0.118.0",
    "pytest>=8.4.2",
    "uvicorn>=0.38.0",
    "pytest-asyncio>=1.3.0",
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "peft>=0.7.0",
    "mlflow>=3.7.0",
    "torchvision>=0.24.1",
    "httpx>=0.28.1",
    "boto3>=1.42.14",
]

[[tool.uv.index]]
name = "torch"
url = "https://download.pytorch.org/whl/cpu"

[project.scripts]
start-app = "prediction.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["prediction"]

[tool.uv]
package = true
