[project]
name = "model-deployment-starter"
version = "0.1.0"
description = "Containerized solution starter for developing, training and deploying prediction models"
requires-python = ">=3.14"

[dependency-groups]
app = [
    "fastapi>=0.118.0",
    "uvicorn>=0.38.0",
    "httpx>=0.28.1",
    "boto3>=1.42.14",
    "pip-system-certs>=5.2",
]
model = [
    "mlflow>=3.7.0",
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "peft>=0.7.0",
    "torchvision>=0.24.1",
    "mlflow>=3.7.0",
    "pip-system-certs>=5.2",
]

[tool.uv]
default-groups = "all"

[[tool.uv.index]]
name = "torch"
url = "https://download.pytorch.org/whl/cpu"
