[project]
name = "model-deployment-starter"
version = "0.1.0"
description = "Containerized solution starter for developing, training and deploying prediction models"
requires-python = ">=3.14"

[dependency-groups]
app = [
    "fastapi>=0.118.0",
    "uvicorn>=0.38.0",
    "httpx>=0.28.1",
    "pip-system-certs>=5.2",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
]
models = [
    "mlflow>=3.7.0",
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "peft>=0.7.0",
    "torchvision>=0.24.1",
    "mlflow>=3.7.0",
    "boto3>=1.42.14",
    "pip-system-certs>=5.2",
]
dev = [
    "duckdb>=1.4.3",
    "jupyter>=1.1.1",
    "pre-commit>=4.5.1",
    "psycopg2-binary>=2.9.11",
]

[tool.uv]
default-groups = "all"

[[tool.uv.index]]
name = "torch"
url = "https://download.pytorch.org/whl/cpu"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["models"]
